Add Manual Sign Doc